# extractor

./: .gitignore  CMakeLists.txt  README.md
include/extractor/: BindedMatchers.hpp  Matcher.hpp  TypeConversion.hpp  Utils.hpp
src/: BindedMatchers.cpp  Matcher.cpp  TypeConversion.cpp  Utils.cpp  main.cpp
